aws/infra/nat.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "app-nat-eip"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_2a.id

  tags = {
    Name = "app-natgw"
  }

  depends_on = [aws_internet_gateway.igw]
}
